# magic-modules

./: .byebug_history  .erb-lint.yml  .gitignore  .gitmodules  .rubocop.yml  .ruby-version  .terraform.lock.hcl  .tool-versions  .travis.yml  .yamllint  1.py  404.html  AGENTS.md  AZURE_DEVELOPER.md  BUILD.bazel  CI_README.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPER.md  GEMINI.md  GEMINI_ADD.md  GEMINI_FIX.md  GNUmakefile  GOVERNANCE.md  Gemfile  LICENSE  MODULE.bazel  README.md  Rakefile  TEMPLATE_SDK.md  TUTORIAL.md  book.min.34f6ea145e56d87823abe9f451d0a8fbe3dbcc6f9e02412199a014611b7adf70.css  build.sh  ci.yml  clean_empty_lines.py  cleanup_tgc.py  commit_msg.txt  compiler.rb  convert.go  custom_org_policy.go  (+451 more)
build_defs/: BUILD.bazel  product.bzl  providers.bzl  resource.bzl
mmv1/: .rubocop.yml  .yamllint  BUILD  BUILD.bazel  Gemfile  README.md  Rakefile  TUTORIAL.md  _modules_count.sh  _testing  _testing.sh  cba.go  compiler  compiler.go  compiler.rb  convert.sh  description-copy.go  go.mod  go.sum  main.go  template-converter.go  validate_third_party_test.go
mmv1/--version/: main.go
mmv1/--version/version/: version.go
mmv1/.bundle/: config
mmv1/api/: BUILD  BUILD.bazel  async.go  async.rb  compiler.go  compiler.rb  custom_errors.go  object.go  object.rb  product.go  product.rb  product_test.go  resource.go  resource.rb  resource_test.go  runtime.go  singular_datasource.go  timeout.go  timeout.rb  timeouts.go  type.go  type.rb  type_test.go
mmv1/api/metadata/: BUILD  BUILD.bazel  field.go  field_test.go  metadata.go  metadata_test.go
mmv1/api/product/: BUILD  BUILD.bazel  api_reference.rb  version.go  version.rb
mmv1/api/resource/: BUILD  BUILD.bazel  custom_code.go  datasource.go  docs.go  ephemeral_resource.go  examples.go  iam_policy.go  iam_policy.rb  list_resource.go  nested_query.go  nested_query.rb  reference_links.go  reference_links.rb  sample.go  sample_test.go  samples.go  step.go  step_test.go  sweeper.go  tgc.go  tgc_test.go  validation.go  virtual_fields.go
mmv1/api/utils/: BUILD  BUILD.bazel  omit_defaults.go  omit_defaults_test.go  utils.go  utils_test.go
mmv1/cmd/: BUILD  BUILD.bazel  main.go
mmv1/compile/: core.rb  openapi_parser.rb
mmv1/google/: BUILD  BUILD.bazel  extensions.rb  fs.go  fs_test.go  golang_utils.rb  logger.rb  module_utils.go  python_utils.rb  slice_utils.go  slice_utils_test.go  string_utils.go  string_utils.rb  string_utils_test.go  template_utils.go  yaml_validator.go  yaml_validator.rb
mmv1/loader/: BUILD  BUILD.bazel  custom_errors.go  file_ops.go  loader.go  options.go
mmv1/open_api_parser/: parser.rb
mmv1/openapi_generate/: BUILD  BUILD.bazel  description_yaml.tmpl  header.txt  memorystore_public_openapi3_0_v1beta.json  parser.go  parser.rb  parser_test.go  product_yaml.tmpl  property_yaml.tmpl  resource_yaml.tmpl
mmv1/openapi_generate/openapi/: agentregistry_v1alpha.json  ces_public_openapi3_0_v1.json  chronicle_prod_public_openapi3_0_v1beta.json  contactcenterinsights.v1.json  (+11 more)
mmv1/output/: go.mod  go.sum
mmv1/overrides/: resources.rb  runner.rb  validator.rb
mmv1/products/: BUILD.bazel
mmv1/provider/: BUILD  BUILD.bazel  abstract_core.rb  ansible.go  ansible_template_data.go  config.rb  core.rb  file_template.rb  inspec.rb  provider.go  template_data.go  template_data_test.go  terraform.go  terraform.rb  terraform_cai2hcl_provider.rb  terraform_cloud_docs.rb  terraform_kcc.rb  terraform_object_library.rb  terraform_oics.go  terraform_oics.rb  terraform_tgc.go  terraform_tgc.rb  terraform_tgc_cai2hcl.go  terraform_tgc_cai2hcl.rb  terraform_tgc_next.go  terraform_tgc_next_test.go  terraform_tgc_v6.go  terraform_tgc_v7.go  terraform_validator.rb
mmv1/relative/: file_ops.go
mmv1/spec/: .rubocop.yml  compiler_spec.rb  copyright.rb  copyright_spec.rb  google_python_spec.rb  hashicorp_copyright_spec.rb  object_spec.rb  open_api_parser.rb  openapi_generate.rb  override_runner_spec.rb  override_validator_spec.rb  product_spec.rb  provider_terraform_import_spec.rb  provider_terraform_resource_override_spec.rb  provider_terraform_spec.rb  resource_spec.rb  spec_helper.rb  type_spec.rb  yaml_validator_spec.rb
mmv1/templates/: BUILD  BUILD.bazel  async.yaml.erb  autogen_notice.erb  hashicorp_copyright_header.erb  stackdriver.json  terraform.yaml
mmv1/test/: BUILD.bazel  validate_third_party_test.go
mmv1/tools/: bootstrap  doctor
tpgtools/: BUILD.bazel  README.md  documentation.go  file_utility.go  file_utils.go  go.mod  go.sum  handwritten.go  id.go  main.go  main_helpers.go  misc_utils.go  mmv1.md  names.go  override.go  override_details.go  product.go  property.go  property_helpers.go  resource.go  sample.go  serialization.go  serialization.go.base  serialization_helpers.go  strings.go  type.go  versions.go
tpgtools/differ/: diff.go  run_diff.sh
tpgtools/handwritten/: bigqueryreservation_utils.go  common_custom_directive.go  compute_utils.go  dcl.go  dcl_logger.go  expanders.go  expanders_test.go  flatteners.go  go.mod  orgpolicy_utils.go  resource_bigqueryreservation_reservation_test.go  runtimeconfig_utils.go  state_setters.go  tpgtools_utils.go  tpu_utils.go  utils.go
tpgtools/ignored_handwritten/: access_context_manager_utils.go  common_custom_diff.go  common_diff_suppress.go  common_set_hash.go  common_skip_delete.go  compute_utils.go  custom_import.go  disk_utils.go  expanders.go  redis_utils.go  runtimeconfig_utils.go  state_setters.go  storage_utils.go  tpu_utils.go  utils.go  validation.go
tpgtools/serializable/: serializable.go  serializable_test.go
tpgtools/templates/: provider_dcl_client_creation.go.tmpl  provider_dcl_endpoints.go.tmpl  provider_dcl_resources.go.tmpl  resource.go.tmpl  resource.html.markdown.tmpl  resource_service.go.tmpl  serialization.go.tmpl  sweeper.go.tmpl  sweeper_service.go.tmpl  test.go.tmpl  test_file.go.tmpl  test_file_service.go.tmpl
tpgtools/types/: constants.go  override.go  override_details.go  property.go  property_helpers.go  resource.go  resource_id.go  type.go  type_fetcher.go
tpgtools/utils/: general.go  resource_id.go  strings.go
(+20003 files in other folders)
