load("@gazelle//:def.bzl", "gazelle")

# gazelle:exclude .ci
# gazelle:exclude .github
# gazelle:exclude docs
# gazelle:exclude mmv1/products
# gazelle:exclude mmv1/templates
# gazelle:exclude mmv1/third_party
# gazelle:exclude scripts
# gazelle:exclude tools
# gazelle:exclude tpgtools
# gazelle:prefix github.com/GoogleCloudPlatform/magic-modules
gazelle(name = "gazelle")
