bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(go_deps, "com_github_hashicorp_hcl", "com_github_golang_glog", "com_github_googlecloudplatform_declarative_resource_client_library", "com_github_kylelemons_godebug", "com_github_nasa9084_go_openapi", "in_gopkg_yaml_v2", "org_bitbucket_creachadair_stringset")
