bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//mmv1:go.mod")

use_repo(
    go_deps,
    "com_github_getkin_kin_openapi",
    "com_github_golang_glog",
    "com_github_google_go_cmp",
    "com_github_otiai10_copy",
    "in_gopkg_yaml_v3",
    "org_golang_x_exp",
)
