load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "product",
    srcs = [
        "product.bzl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "resource",
    srcs = [
        "resource.bzl",
    ],
    visibility = ["//visibility:public"],
)
