load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mmv1_lib",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/magic-modules/mmv1",
    visibility = ["//visibility:private"],
    deps = [
        "//mmv1/api",
        "//mmv1/google",
        "//mmv1/loader",
        "//mmv1/openapi_generate",
        "//mmv1/provider",
        "@org_golang_x_exp//slices",
    ],
)

go_binary(
    name = "mmv1",
    embed = [":mmv1_lib"],
    visibility = ["//visibility:public"],
)
