load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "async.go",
        "compiler.go",
        "product.go",
        "resource.go",
        "timeouts.go",
        "type.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/magic-modules/mmv1/api",
    visibility = ["//mmv1:__subpackages__"],
    deps = [
        "//mmv1/api/product",
        "//mmv1/api/resource",
        "//mmv1/api/utils",
        "//mmv1/google",
        "@com_github_golang_glog//:glog",
        "@org_golang_x_exp//slices",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "product_test.go",
        "resource_test.go",
        "type_test.go",
    ],
    embed = [":api"],
    deps = ["//mmv1/api/product"],
)
