load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    data = ["//mmv1/templates"],  # keep
    importpath = "github.com/GoogleCloudPlatform/magic-modules/mmv1/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//mmv1/api",
        "//mmv1/provider",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
