load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "google",
    srcs = [
        "slice_utils.go",
        "string_utils.go",
        "template_utils.go",
        "yaml_validator.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/magic-modules/mmv1/google",
    visibility = ["//mmv1:__subpackages__"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "google_test",
    srcs = [
        "slice_utils_test.go",
        "string_utils_test.go",
    ],
    embed = [":google"],
)
