load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "google",
    srcs = [
        "fs.go",
        "slice_utils.go",
        "string_utils.go",
        "template_utils.go",
        "yaml_validator.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/magic-modules/mmv1/google",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "google_test",
    srcs = [
        "fs_test.go",
        "slice_utils_test.go",
        "string_utils_test.go",
    ],
    embed = [":google"],
)
