load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "loader",
    srcs = [
        "custom_errors.go",
        "file_ops.go",
        "loader.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/magic-modules/mmv1/loader",
    visibility = ["//visibility:public"],
    deps = [
        "//mmv1/api",
        "@com_github_golang_glog//:glog",
        "@org_golang_x_exp//slices",
    ],
)
