load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "provider",
    srcs = [
        "provider.go",
        "template_data.go",
        "terraform.go",
        "terraform_oics.go",
        "terraform_tgc.go",
        "terraform_tgc_cai2hcl.go",
        "terraform_tgc_next.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/magic-modules/mmv1/provider",
    visibility = ["//mmv1:__subpackages__"],
    deps = [
        "//mmv1/api",
        "//mmv1/api/product",
        "//mmv1/api/resource",
        "//mmv1/google",
        "@com_github_golang_glog//:glog",
        "@com_github_otiai10_copy//:copy",
        "@org_golang_x_exp//slices",
    ],
)
