load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "resource",
    srcs = [
        "custom_code.go",
        "docs.go",
        "examples.go",
        "iam_policy.go",
        "nested_query.go",
        "reference_links.go",
        "sweeper.go",
        "validation.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/magic-modules/mmv1/api/resource",
    visibility = ["//mmv1:__subpackages__"],
    deps = [
        "//mmv1/google",
        "@com_github_golang_glog//:glog",
    ],
)
