load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = ["utils.go"],
    importpath = "github.com/GoogleCloudPlatform/magic-modules/mmv1/api/utils",
    visibility = ["//visibility:public"],
)

go_test(
    name = "utils_test",
    srcs = ["utils_test.go"],
    embed = [":utils"],
)
